--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,12 @@
       android:shell="true"
       tools:targetApi="34"/>
 
+    <meta-data
+      android:name="firebase_crashlytics_collection_enabled"
+      android:value="false" />
+
+    <meta-data android:name="firebase_analytics_collection_enabled" android:value="false" />
+
     <provider
       android:name="androidx.startup.InitializationProvider"
       android:authorities="com.github.whitescent.mastify.androidx-startup"
