--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -37,6 +37,7 @@ agp = "8.3.0"
 coil = "2.4.0"
 media = "0.4.0"
 mmkv = "1.3.2"
+mmkvKtx = "0.1.3"
 mockk = "1.13.8"
 mockitoKotlin = "5.1.0"
 lottie = "6.0.0"
@@ -124,6 +125,8 @@ com-google-dagger-hilt-compiler = { module = "com.google.dagger:hilt-compiler", 
 
 androidx-startup-runtime = { module = "androidx.startup:startup-runtime", version.ref = "androidxStartup" }
 mmkv = { module = "com.tencent:mmkv", version.ref = "mmkv" }
+mmkv-ktx = { module = "com.meowool:mmkv", version.ref = "mmkvKtx" }
+mmkv-ktx-compiler = { module = "com.meowool:mmkv-compiler", version.ref = "mmkvKtx" }
 mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version.ref = "mockitoKotlin" }
 mockk = { module = "io.mockk:mockk-android", version.ref = "mockk" }
 mockk-agent = { module = "io.mockk:mockk-agent", version.ref = "mockk" }
